--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,6 @@ jobs:
 
   # --- JOB 2: Build Custom JREs (Required for embedding) ---
   jlink:
-    name: Build JRE (${{ matrix.name }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -57,10 +56,12 @@ jobs:
             name: linux-x64
           - os: windows-latest
             name: windows-x64
-          - os: macos-13 # Intel Mac
-            name: macOS-x64
-          - os: macos-14 # ARM Mac (M1/M2)
+          - os: macos-14
             name: macOS-arm64
+          - os: macos-13
+            name: macOS-x64
+        os: [ubuntu-latest, windows-latest, macos-14, macos-13]
+
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -68,10 +69,10 @@ jobs:
           java-version: 25
           distribution: 'zulu'
 
-      - name: Create Custom Runtime Image
+      - name: Package JDK
         run: jlink --add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.prefs,java.scripting,java.se,java.security.jgss,java.security.sasl,java.sql,java.transaction.xa,java.xml,jdk.attach,jdk.crypto.ec,jdk.jdi,jdk.management,jdk.net,jdk.unsupported,jdk.unsupported.desktop,jdk.zipfs,jdk.accessibility --output suwa --strip-debug --no-man-pages --no-header-files --compress=2
 
-      - name: Upload JRE
+      - name: Upload JDK package
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.name }}-jre
