--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 21 
+          java-version: 21
           distribution: 'zulu'
 
       - name: Checkout code
@@ -66,10 +66,40 @@ jobs:
           name: ${{ matrix.name }}-jre
           path: jre_bundle
 
-  # --- JOB 3: Build Mangatan Launcher & Bundling ---
+  # --- JOB 3: Build WebUI
+  build_webui:
+    name: Build WebUI
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Set up NodeJs
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: 'Suwayomi-WebUI/package.json'
+          cache: 'yarn'
+          cache-dependency-path: 'Suwayomi-WebUI/yarn.lock'
+
+      - name: Build WebUI Assets
+        run: |
+          cd Suwayomi-WebUI
+          yarn install --frozen-lockfile
+          yarn build
+          # We don't need 'yarn build-zip' because we want the raw files for the artifact
+
+      - name: Upload WebUI Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: webui-assets
+          path: Suwayomi-WebUI/build 
+
+  # --- JOB 4: Build Mangatan Launcher & Bundling ---
   build_mangatan:
     name: Build Mangatan (${{ matrix.name }})
-    needs: [build_ocr, jlink]
+    needs: [build_ocr, jlink, build_webui]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -149,19 +179,11 @@ jobs:
         shell: bash
         run: curl -L "https://github.com/Suwayomi/Suwayomi-Server-preview/releases/download/v2.1.2019/Suwayomi-Server-v2.1.2019.jar" -o bin/mangatan/resources/Suwayomi-Server.jar
 
-      - name: Download and Setup WebUI
-        shell: bash
-        run: |
-          curl -L "https://github.com/KolbyML/Suwayomi-WebUI/releases/download/v1.0.7/Suwayomi-WebUI-v1.0.7.zip" -o webui.zip
-          mkdir webui_temp
-          unzip webui.zip -d webui_temp
-          mkdir -p bin/mangatan/resources/suwayomi-webui
-          if [ $(ls -1 webui_temp | wc -l) -eq 1 ] && [ -d "webui_temp/$(ls webui_temp)" ]; then
-            mv webui_temp/$(ls webui_temp)/* bin/mangatan/resources/suwayomi-webui/
-          else
-            mv webui_temp/* bin/mangatan/resources/suwayomi-webui/
-          fi
-          rm -rf webui_temp webui.zip
+      - name: Download WebUI Assets
+        uses: actions/download-artifact@v4
+        with:
+          name: webui-assets
+          path: bin/mangatan/resources/suwayomi-webui
 
       # --- COMPILATION ---
       - name: Build Binary
@@ -237,7 +259,7 @@ jobs:
           # Copy the binary
           cp target/${{ matrix.target }}/release/mangatan output/
           
-          # Zip it (Standard practice for distributing binaries to preserve permissions)
+          # Zip it
           cd output
           zip mangatan-macos.zip mangatan
 
@@ -261,10 +283,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mangatan-${{ matrix.arch_name }}
-          # Points to the simple zip
           path: output/mangatan-macos.zip
 
-  # --- JOB 4: Release ---
+  # --- JOB 5: Release ---
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [build_mangatan]
@@ -305,7 +326,7 @@ jobs:
           # LINUX (Deb)
           mv release/linux/*.deb final_release/Mangatan-${VERSION}-Linux-x64.deb
           
-          # MACOS (Renaming the simple zips)
+          # MACOS
           mv release/mac-intel/mangatan-macos.zip final_release/Mangatan-${VERSION}-macOS-Intel.zip
           mv release/mac-silicon/mangatan-macos.zip final_release/Mangatan-${VERSION}-macOS-Silicon.zip
 
