--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -177,7 +177,7 @@ jobs:
 
       - name: Download Suwayomi JAR
         shell: bash
-        run: curl -L "https://github.com/Suwayomi/Suwayomi-Server-preview/releases/download/v2.1.2019/Suwayomi-Server-v2.1.2019.jar" -o bin/mangatan/resources/Suwayomi-Server.jar
+        run: make download_jar
 
       - name: Download WebUI Assets
         uses: actions/download-artifact@v4
