--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ bin/mangatan/resources/natives.zip
 bin/mangatan/resources/Suwayomi-Server.jar
 bin/mangatan/resources/jre_bundle.zip
 bin/mangatan_android/assets/*
+bin/mangatan_ios/.build/*
 target
 .DS_Store
 jre_bundle
