--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "bin/manatan",
     "bin/manatan_android",
     "bin/manatan_ios/backend",
+    "crates/audio-server",
     "crates/ocr-server", 
     "crates/yomitan-server",
 ]
@@ -74,6 +75,7 @@ zip = "6.0"
 # Internal Dependencies
 manatan-ocr-server = { path = "crates/ocr-server" }
 manatan-yomitan-server = { path = "crates/yomitan-server" }
+manatan-audio-server = { path = "crates/audio-server" }
 
 [profile.test]
 inherits = "release"
