--- a/bin/manatan/Cargo.toml
+++ b/bin/manatan/Cargo.toml
@@ -38,6 +38,7 @@ zip.workspace = true
 # Internal Crates
 manatan-ocr-server.workspace = true
 manatan-yomitan-server.workspace = true
+manatan-audio-server.workspace = true
 
 [[bin]]
 name = "manatan"
